# blasr

./: .gitignore  .gitmodules  Blasr.cpp  GNUmakefile  MANUAL.md  Makefile  MappingBuffers.hpp  MappingIPC.h  MappingParameters.h  README.INSTALL.md  README.MANUAL.md  README.md  ReadAlignments.hpp  RegisterBlasrOptions.h  RegisterFilterOptions.h  blasr_git_common.mk  blasr_gitp4.mk  common.mk  configure.py  cram.mk  libcpp.makefile  make.rules  makefile  p4.common.mk  p4.fetch.tmpmk  p4.mk  rules.mk  sub.mk  travis.sh  yli.makefile
alignment/: Blasr.cpp  Makefile  MappingIPC.h  MappingParameters.h  Mask.cpp  RemoveAdapters.cpp  SDPMatcher.cpp  SWMatcher.cpp  WordCounter.cpp
buildctl/: buildctl.sh
common/: CCSSequence.h  CommandLineParser.h  DNASequence.h  Enumerations.h  FASTAReader.h  FASTASequence.h  FASTQReader.h  FASTQSequence.h  FileUtils.h  SMRTSequence.h
common/algorithms/alignment/: AffineGuidedAlign.h  AlignmentUtils.h  BaseScoreFunction.h  GraphPaper.h  GuidedAlign.h  IDSScoreFunction.h  SDPAlign.h
common/algorithms/anchoring/: FindMaxInterval.h
common/cdna/: GencodeGFFFile.h
common/data/gff/: GFFFile.h
common/data/hdf/: BufferedHDFArray.h  DatasetCollection.h  HDFAttributable.h  HDFBasReader.h  HDFBasWriter.h  HDFCCSReader.h  HDFCmpFile.h  HDFFileLogGroup.h  (+13 more)
common/files/: BaseSequenceIO.h  FragmentCCSIterator.h  ReaderAgglomerate.h
common/ipc/: SharedMemoryAllocator.h
common/simulator/: OutputSampleListSet.h
common/statistics/: VarianceAccumulator.h
common/tuples/: TupleMatching.h
common/utils/: FileOfFileNames.h  MD5Utils.h  RangeUtils.h  RegionUtils.h  SMRTReadUtils.h  StringUtils.h
ctest/: affineAlign.t  aggressiveIntervalCut.t  alignScore.t  bamConcordant.t  bamIn.t  bamOut.t  blasr.t  bug25328.t  bug25741.t  bug25766.t  ccsH5.t  cigarAdjecentIndels.t  concordant.t  dataset.t  deterministic.t  ecoli.t  fastMaxInterval.t  fastaInBamOut.t  filtercriteria.t  fofn.t  hitpolicy.t  holeNumbers.t  loadPulses.t  m0-5.t  multipart.t  noSplitSubreads.t  open_fail.t  samFilter.t  samNM.t  samtoh5.t  samtom4.t  setup.sh  unaligned.t  useccsallBestN1.t  useccsallLargeGenome.t  verbose.t
extrautils/: BasH5Simulator.cpp  BuildSequenceDB.cpp  BwtToSuffixArray.cpp  CCSH5ToBam.cpp  Evolve.cpp  ExciseRepeats.cpp  GNUmakefile  Makefile  PrintTupleCountTable.cpp  SALS.cpp  SAModify.cpp  SWMatcher.cpp  SimpleShredder.cpp  StoreQualityByContextFromCmpH5.cpp  SuffixArrayToBWT.cpp  makefile  p4.mk
extrautils/ctest/: alchemy.t  bwt2sa.t  ccsh5tobam.t  cmpH5StoreQualityByContext.t  printTupleCountTable.t  sa2bwt.t  sals.t  samodify.t  setup.sh  swmatcher.t
gold_standard/: Makefile
iblasr/: BlasrAlign.hpp  BlasrAlignImpl.hpp  BlasrHeaders.h  BlasrMiscs.hpp  BlasrMiscsImpl.hpp  BlasrUtils.hpp  BlasrUtilsImpl.hpp  MappingBuffers.hpp  MappingIPC.h  MappingParameters.h  MappingSemaphores.h  ReadAlignments.hpp  RegisterBlasrOptions.h  RegisterFilterOptions.h
include/: BlasrAlign.hpp  BlasrAlignImpl.hpp  BlasrHeaders.h  BlasrMiscs.hpp  BlasrMiscsImpl.hpp  BlasrUtils.hpp  BlasrUtilsImpl.hpp  MappingParameters.h  ReadAlignments.hpp  RegisterFilterOptions.h
jabon/: Makefile
pbihdfutils/: ComputeRefCoverage.cpp  ExtractReadsByTitle.cpp  LoadPulses.cpp  LoadPulses2.cpp  Makefile  PrintMapqvTrack.cpp  PulseToFasta.cpp  SamFilter.cpp  SamToCmpH5.cpp  SamToM4.cpp  WriteHDFSubset.cpp
pelusa/: Makefile
pelusa/src/: BitArray.h  FeatureEncoder.cpp  FeatureEncoder.h  PelusaApp.cpp  PelusaOverlapper.cpp  PelusaOverlapper.h
samutils/: Makefile
sequtils/: FilterBySubreadAgreement.cpp  Makefile
simulator/: BasH5Simulator.cpp  Makefile  README  StoreQualityByContextFromCmpH5.cpp
utest/: Makefile  common.mk
utest/common/: CCSSequence_gtest.cpp  DNASequence_gtest.cpp  FASTAReader_gtest.cpp  FASTASequence_gtest.cpp  FASTQReader_gtest.cpp  FileUtils_gtest.cpp  Makefile  NucConversion_gtest.cpp  SMRTSequence_gtest.cpp  SeqUtils_gtest.cpp  defs_gtest.cpp  testdata.h  utils_gtest.cpp
utils/: .gitignore  GNUmakefile  LoadPulses.cpp  Makefile  PulseToFasta.cpp  SAWriter.cpp  SDPMatcher.cpp  SamFilter.cpp  SamToCmpH5.cpp  SamToM4.cpp  ToAfg.cpp  makefile  p4.mk
utils/bam2bax/: BUILD.txt  CMakeLists.txt  README.md  makefile
utils/bam2bax/src/: Bam2Bax.cpp  Bam2Bax.h  Bam2BaxConverter.h  Bam2BaxConverterImpl.hpp  Bam2BaxInternal.h  Bam2BaxMain.cpp  Bam2PlxMain.cpp  CMakeLists.txt  Converter.cpp  Converter.h  IConverter.cpp  IConverter.h  MetadataWriter.cpp  MetadataWriter.h  RegionTypeAdapter.h  RegionsAdapter.h  Settings.cpp  Settings.h
utils/bam2bax/tests/: CMakeLists.txt  files.cmake
utils/bam2bax/tests/cram/: bam2bax.t  bam2plx.t
utils/bam2bax/tests/data/: m140905_042212_sidney_c100564852550000001823085912221377_s1_X0.1.scraps.bam  m140905_042212_sidney_c100564852550000001823085912221377_s1_X0.1.subreads.bam  tiny.scraps.sam  tiny.subreads.sam  tiny_bam2plx.polymerase.sam
utils/bam2bax/tests/example/: end-to-end.sh
utils/bam2bax/tests/resequencing/: bam2bax_resequencing.py  one_bax_test.sh  settings.xml  tiny_test.sh
utils/bam2bax/tests/src/: TestConstants.h  TestData.h.in  TestUtils.cpp  TestUtils.h  test.cpp  test_Bam2BaxConverter.cpp  test_HDFBaseCallsWriter.cpp  test_HDFBaxWriter.cpp  test_HDFScanDataWriter.cpp  test_HDFZMWMetricsWriter.cpp  test_HDFZMWWriter.cpp
utils/bax2bam/: BUILD.txt  CMakeLists.txt  README.md  makefile
utils/bax2bam/src/: Bax2Bam.cpp  Bax2Bam.h  CMakeLists.txt  CcsConverter.cpp  CcsConverter.h  ConverterBase.h  HqRegionConverter.cpp  HqRegionConverter.h  IConverter.cpp  IConverter.h  OptionParser.h  PolymeraseReadConverter.cpp  PolymeraseReadConverter.h  Settings.cpp  Settings.h  SubreadConverter.cpp  SubreadConverter.h  main.cpp
utils/bax2bam/tests/: CMakeLists.txt  bax2bam.t  files.cmake
utils/bax2bam/tests/src/: TestData.h  TestData.h.in  TestUtils.cpp  TestUtils.h  test_ccs.cpp  test_common.cpp  test_hqregions.cpp  test_polymerase.cpp  test_subreads.cpp
utils/ctest/: loadPulses.t  loadPulses_fast.t  pls2fasta.t  pls2fasta_fast.t  samFilter.t  samtoh5.t  samtom4.t  sawriter.t  sdpMatcher.t  sdpmatcher.t  toAfg.t
(+72 files in other folders)
